--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,8 @@ dependencies {
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+
+    // Koin
+    implementation "io.insert-koin:koin-android:3.1.4"
+    implementation "io.insert-koin:koin-androidx-compose:3.1.4"
 }
