--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlinx-serialization'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -16,6 +19,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
+        }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.schemaLocation":"$projectDir/schemas".toString(),
+                        "room.incremental":"true",
+                        "room.expandProjection":"true"]
+            }
         }
     }
 
@@ -69,4 +81,24 @@ dependencies {
     // Koin
     implementation "io.insert-koin:koin-android:3.1.4"
     implementation "io.insert-koin:koin-androidx-compose:3.1.4"
+
+    //Ktor
+    implementation "io.ktor:ktor-client-core:1.6.3"
+    implementation "io.ktor:ktor-client-android:1.6.3"
+    implementation "io.ktor:ktor-client-serialization:1.6.3"
+    implementation "io.ktor:ktor-client-serialization-jvm:1.6.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.3.2"
+    implementation "io.ktor:ktor-client-logging:1.6.3"
+    implementation "ch.qos.logback:logback-classic:1.2.3"
+    implementation "io.ktor:ktor-client-json-jvm:1.6.3"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+
+    //Coil
+    implementation "io.coil-kt:coil-compose:1.3.1"
+
+    //Room
+    implementation "androidx.room:room-runtime:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
 }
